# BunkerTelegramBot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/ISSUE_TEMPLATE/: feature_request.md  issue-template.md
.github/workflows/: codestyle_linters.yml  main.yml
infra/dev/: docker-compose.local.yaml  docker-compose.stage.yaml
infra/nginx/: default.conf  default.prod.conf
infra/prod/: docker-compose.prod.yaml
src/: Dockerfile  manage.py  requirements.txt
src/admin_user/: admin.py  apps.py  models.py
src/admin_user/migrations/: 0001_initial.py
src/bot/: admin.py  apps.py  bot_interface.py  models.py
src/bot/constants/: actions.py  buttons.py  callback_data.py  commands.py  messages.py  states.py
src/bot/handlers/: action_handlers.py  command_handlers.py  game_handlers.py  room_handlers.py  start_handler.py  start_handlers.py
src/bot/keyboards/: action_keyboards.py  inline_keyboards.py
src/bot/migrations/: 0001_initial.py  0002_game_character_game.py  0002_initial.py  0003_alter_character_game.py  0003_remove_user_is_admin_remove_user_last_login_date_and_more.py  0004_remove_game_bunker_game_bunker_type_game_room_one_and_more.py  0005_game_epidemia_time.py  0006_remove_character_room_remove_game_room_and_more.py
src/bot/utils/: back_button_builder.py  callback_helpers.py  (+7 more)
src/core/: asgi.py  urls.py  views.py  wsgi.py
src/data/: actions_carts.csv
src/game/: admin.py  apps.py  models.py
src/templates/: admin_log_file.html  admin_logs.html  send_message.html
(+42 files in other folders)
